syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.challenge.grpc";
option java_outer_classname = "PrimeNumbersProto";


service PrimeNumbersService {
  rpc getPrimes (PrimeRequest) returns (stream PrimeReply) {}
}

message PrimeRequest{
  int32 number = 1;
}

message PrimeReply {
  google.protobuf.Int32Value prime = 1;
}
